Contract Configurator 1.5.4
- Added new extended PartModule mode to PartValidation parameter (thanks NathanKell).
- Added additional validation to WaypointGenerator.RANDOM_WAYPOINT_NEAR (thanks Xaegr).
- Minor changes to VesselSpawner.
- Fixed issue with VesselNotDestroyed firing for EVA Kerbals boarding a vessel (thanks Cooper42).

Contract Configurator 1.5.3
- Added UnlockPart behaviour.
- Added CanResearchTech requirement.
- Added AvailablePart.IsUnlocked and AvailablePart.CrewCapacity.
- Added Log() function for expressions.
- Added new basic type-conversion functions for expressions (int(), float(), double(), etc.).
- Fixed issue with Vessel.Parts() (thanks Whyren).
- Minor bug fixes.

Contract Configurator 1.5.2
- Allow multiple parts to be specified in the PartValidation parameter.
- Added CelestialBody.RemoteTechCoverage() method for expressions.
- Added CelestialBody.Mass() and CelestialBody.RotationalPeriod() for expressions.
- Added KSCLocation() function for expressions.
- Enhancements to Timer parameter.
- Fixed issue in BiomeTracker when uninstalling a previously installed planet pack (thanks herman and xEvilReeperx).
- Fixed possible exception in VisitWaypoint (thanks AlphaAsh).
- Fixed bug in PartValidation where using FILTER would prevent the parameter from completing.
- Fixed ReachSpecificOrbit so it outputs the orbit details in a note (thanks FinnishGameBox).
- Fixed VesselNotDestroyed firing for debris.
- Minor bug fixes.

Contract Configurator 1.5.1
- Added new ChangeVesselOwnership contract behaviour.
- Added new NewVessel parameter.
- Added support for Tarsier Space Technology in science subsystem - ChemCam only (thanks GrafZahl).
- Added validation for CelestialBody name in WaypointGenerator (thanks Arctic Sesquipedalian).
- Additional performance fixes for CollectScience (Field Research).
- Fixed issue where activeUniqueValue and uniqueValue flags were not checked (thanks severedsolo).