@@ -3,6 +3,7 @@ Contract Configurator 1.5.4
 - Added additional validation to WaypointGenerator.RANDOM_WAYPOINT_NEAR (thanks Xaegr).
 - Minor changes to VesselSpawner.
 - Fixed issue with VesselNotDestroyed firing for EVA Kerbals boarding a vessel (thanks Cooper42).
+- Fixed Pow() and Log() expression functions to work correctly with types other than double (thanks NathanKell).
 
 Contract Configurator 1.5.3
 - Added UnlockPart behaviour.
